@@ -1,6 +1,8 @@
 from .shared.utils import *
 import circus.shared.algorithms as algo
 from circus.shared.probes import get_nodes_and_edges
+from circus.shared.messages import print_and_log
+
 
 def main(params, nb_cpu, nb_gpu, use_gpu):
     numpy.random.seed(426236)
@@ -32,7 +34,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
     #################################################################
 
     if comm.rank == 0:
-        io.print_and_log(["Extracting templates from already found clusters..."], 'default', params)
+        print_and_log(["Extracting templates from already found clusters..."], 'default', params)
 
     thresholds                           = io.load_data(params, 'thresholds')
     basis_proj, basis_rec                = io.load_data(params, 'basis')
@@ -150,7 +152,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
 
     gdata = gather_array(numpy.array([total_nb_elts], dtype=numpy.float32), comm, 0)
     if comm.rank == 0:
-        io.print_and_log(["Found %d spikes over %d requested" %(int(numpy.sum(gdata)), int(nb_elts))], 'default', params)
+        print_and_log(["Found %d spikes over %d requested" %(int(numpy.sum(gdata)), int(nb_elts))], 'default', params)
 
     #print "Spikes extracted in", time.time() - t_start, "s"
 
@@ -166,7 +168,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
 
     comm.Barrier()
     if comm.rank == 0:
-        io.print_and_log(["Extracting the templates..."], 'default', params)
+        print_and_log(["Extracting the templates..."], 'default', params)
     
     total_nb_clusters = int(comm.bcast(numpy.array([int(numpy.sum(gdata3))], dtype=numpy.int32), root=0)[0])
     offsets    = numpy.zeros(comm.size, dtype=numpy.int32)
@@ -339,20 +341,20 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
     comm.Barrier()
 
     if comm.rank == 0:
-        io.print_and_log(["Merging similar templates..."], 'default', params)
+        print_and_log(["Merging similar templates..."], 'default', params)
     
     merged1 = algo.merging_cc(params, parallel_hdf5)
 
     comm.Barrier()
     if remove_mixture:
         if comm.rank == 0:
-            io.print_and_log(["Removing mixtures..."], 'default', params)
+            print_and_log(["Removing mixtures..."], 'default', params)
         merged2 = algo.delete_mixtures(params, parallel_hdf5)
     else:
         merged2 = [0, 0]
 
     if comm.rank == 0:
-        io.print_and_log(["Number of global merges    : %d" %merged1[1], 
+        print_and_log(["Number of global merges    : %d" %merged1[1], 
                        "Number of mixtures removed : %d" %merged2[1]], 'info', params)    
 
     comm.Barrier()
