@@ -9,7 +9,6 @@ Release 0.5
 * N_t and radius have been moved to the [detection] section, more consistent
 * addition of an explicit file_format parameter in the [data] section
 * every file format may have its own parameters, see documentation for details
-* faster IO for raw binary files
 * can now work natively with open ephys data files (.openephys)
 * can now work natively with MCD data files (.mcd) [using neuroshare]
 * can now work natively with Kwik (KWD) data files (.kwd)
@@ -18,11 +17,14 @@ Release 0.5
 * can now work natively with Arf data files (.arf)
 * can now work natively with 3Brain data files (.brw)
 * can still work natively with raw binary files with/without headers :)
+* faster IO for raw binary files
 * refactoring of the exports during multi-file/preview/benchmark: everything is now handled in raw binary
 * fix a bug with the size of the safety time parameter during whitening and clustering
 * internal refactoring to ease interaction with new file formats and readibility
 * all the interactions with the parameters are now done in the circus/shared/parser.py file
 * all the interactions with the probe are now done in the circus/shared/probes.py file
+* display the electrode number in the preview/result GUI
+
 
 
 =============
